# wallet-test-task

./: .envrc.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml  ruff.toml
requirements/: base.txt  dev.txt
src/: asgi.py  urls.py  wsgi.py
src/apps/wallet/: filters.py  models.py  pagination.py  renderers.py  serializers.py  urls.py  views.py
src/apps/wallet/migrations/: 0001_initial.py  0002_rename_walletmodel_wallet.py  0003_alter_wallet_balance_transaction.py  0004_alter_transaction_txid.py  0005_alter_wallet_label_and_more.py  0006_alter_transaction_amount_alter_transaction_txid_and_more.py
src/apps/wallet/tests/: test_transactions.py  test_wallets.py
src/settings/: base.py  prod.py
wallet/: settings.py
